--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,3 @@
 AddType application/x-httpd-php .php .html
-AddHandler application/x-httpd-php .php .html
+AddHandler  application/x-httpd-php .php .html.
+
